tests/baselines/reference/parserForStatement6.errors.txt
parserForStatement6.ts(1,6): error TS2304: Cannot find name 'foo'.
parserForStatement6.ts(1,6): error TS2406: The left-hand side of a 'for...in' statement must be a variable or a property access.
parserForStatement6.ts(1,15): error TS2304: Cannot find name 'b'.


==== parserForStatement6.ts (3 errors) ====
    for (foo() in b) {
         ~~~
!!! error TS2304: Cannot find name 'foo'.
         ~~~~~
!!! error TS2406: The left-hand side of a 'for...in' statement must be a variable or a property access.
                  ~
!!! error TS2304: Cannot find name 'b'.
    }